welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: Unmatched closing brace '}' ignored here
  }
  ^