welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (estFaceMur == true) {droite} else {testSol()};
  }

def testSol() : Boolean = {avance();
                           return (getCouleurSol() == Color.green);}
                }